# regresion-precio-autos

./: .gitignore  README.md  pyproject.toml
notebooks/: solucion-regresion-precio-autos.ipynb
